--- a/pom.xml
+++ b/pom.xml
@@ -1027,14 +1027,17 @@
         <profile>
             <id>prod</id>
             <dependencies>
+
                 <dependency>
                     <groupId>org.testcontainers</groupId>
                     <artifactId>postgresql</artifactId>
                     <scope>test</scope>
                 </dependency>
+
                 <dependency>
                     <groupId>org.postgresql</groupId>
                     <artifactId>postgresql</artifactId>
+                    <scope>runtime</scope>
                 </dependency>
             </dependencies>
             <build>
