--- a/pom.xml
+++ b/pom.xml
@@ -1039,6 +1039,11 @@
                     <artifactId>postgresql</artifactId>
                     <scope>runtime</scope>
                 </dependency>
+
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-jdbc</artifactId>
+                </dependency>
             </dependencies>
             <build>
                 <pluginManagement>
