--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,11 @@
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.17.6</version>
+        </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
 
@@ -921,11 +926,13 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
+
                         <configuration>
                             <testExcludes>
                                 <testExclude>uk/ac/bham/teamproject/config/PostgreSqlTestContainer.java</testExclude>
                             </testExcludes>
                         </configuration>
+
                     </plugin>
 
                 </plugins>
@@ -1016,7 +1023,9 @@
         </profile>
         <profile>
             <id>prod</id>
+
             <dependencies>
+
                 <dependency>
                     <groupId>org.testcontainers</groupId>
                     <artifactId>postgresql</artifactId>
@@ -1025,6 +1034,14 @@
                 <dependency>
                     <groupId>org.postgresql</groupId>
                     <artifactId>postgresql</artifactId>
+                    <version>42.5.1</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.testcontainers</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <version>1.17.6</version>
+                    <scope>test</scope>
                 </dependency>
             </dependencies>
             <build>
