--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
             <artifactId>spotify-web-api-java</artifactId>
             <version>8.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>tech.jhipster</groupId>
             <artifactId>jhipster-framework</artifactId>
@@ -1039,6 +1040,7 @@
                 <dependency>
                     <groupId>org.testcontainers</groupId>
                     <artifactId>postgresql</artifactId>
+                    <version>1.17.6</version>
                     <scope>test</scope>
                 </dependency>
 
