--- a/pom.xml
+++ b/pom.xml
@@ -1053,6 +1053,7 @@
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-jdbc</artifactId>
+                    <version>42.5.1</version>
                 </dependency>
             </dependencies>
             <build>
