--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.datasource.url=jdbc:postgresql://teamproject-postgresql:5432/teamproject
 spring.datasource.username=teamproject
 #spring.datasource.password=password
+#Aki Added from here
+spring.jpa.show-sql=true
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+#To here
