Revert "Aki made some change related to backend and database"
This reverts commit 9086fbecdd579253c5d28b9fc33ac484b0839c24

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -97,7 +97,7 @@ spring:
         console-available: true
 
       datasource:
-        url: jdbc:postgresql://teamproject-postgresql:5432/teamproject
+        url: jdbc:postgresql://localhost:5432/song_database
         username: teamproject
         password:
       jpa:
