--- a/package.json
+++ b/package.json
@@ -101,11 +101,17 @@
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dayjs": "1.11.5",
+    "express": "^4.18.2",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
+    "request": "^2.88.2",
     "rxjs": "7.5.6",
+    "spotify-web-api-node": "^5.0.2",
     "tslib": "2.4.0",
+    "urlsearchparams": "^0.1.1",
     "zone.js": "0.11.6"
   },
   "devDependencies": {
