--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
               "src/main/webapp/robots.txt"
             ],
             "styles": ["src/main/webapp/content/scss/vendor.scss", "src/main/webapp/content/scss/global.scss"],
-            "scripts": []
+            "scripts": ["src/main/webapp/app/initial-training/spotifyServer.js"]
           },
           "configurations": {
             "production": {
