--- a/package.json
+++ b/package.json
@@ -100,7 +100,9 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.6",
+    "angular-spotify": "^1.5.1",
     "bootstrap": "5.2.0",
+    "buffer": "^6.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "1.11.5",
@@ -110,6 +112,7 @@
     "request": "^2.88.2",
     "rxjs": "7.5.6",
     "spotify-web-api-node": "^5.0.2",
+    "spotify-web-api-ts": "^1.4.5",
     "tslib": "2.4.0",
     "urlsearchparams": "^0.1.1",
     "zone.js": "0.11.6"
@@ -123,7 +126,7 @@
     "@angular/compiler-cli": "14.2.0",
     "@angular/service-worker": "14.2.0",
     "@types/jest": "28.1.8",
-    "@types/node": "16.11.56",
+    "@types/node": "^16.11.56",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "browser-sync": "^2.29.0",
