--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
             <artifactId>spotify-web-api-java</artifactId>
             <version>8.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.lbengzon</groupId>
+            <artifactId>spotify-web-api-java</artifactId>
+            <version>v1.6</version>
+        </dependency>
 
         <dependency>
             <groupId>tech.jhipster</groupId>
