--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://teamproject-postgresql:5432/teamproject
 spring.datasource.username=teamproject
+#logging.level.root=DEBUG
 #spring.datasource.password=password
