--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2020",
+    "types": ["node"],
     "module": "es2020",
     "lib": ["es2018", "dom"]
   },
