--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "angular-spotify": "^1.5.1",
     "bootstrap": "5.2.0",
     "buffer": "^6.0.3",
+    "chart.js": "^4.2.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "1.11.5",
