changed client_secret for spotify make sure to pull before using api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:postgresql://teamproject-postgresql:5432/teamproject
 spring.datasource.username=teamproject
+client_secret=
 #logging.level.root=DEBUG
 #spring.datasource.password=password
