--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,14 @@
               "src/main/webapp/manifest.webapp",
               "src/main/webapp/robots.txt"
             ],
-            "styles": ["src/main/webapp/content/scss/vendor.scss", "src/main/webapp/content/scss/global.scss"],
+            "styles": [
+              "src/main/webapp/content/scss/vendor.scss",
+              "src/main/webapp/content/scss/global.scss",
+              "src/main/resources/public/fontawesome/css/brands.min.css",
+              "src/main/resources/public/fontawesome/css/fontawesome.min.css",
+              "src/main/resources/public/fontawesome/css/solid.min.css",
+              "src/main/resources/public/fontawesome/css/regular.min.css"
+            ],
             "scripts": ["src/main/webapp/app/initial-training/spotifyServer.js"]
           },
           "configurations": {
