--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -215,7 +215,7 @@ jhipster:
     license: unlicensed
     license-url:
   security:
-    content-security-policy: "default-src 'self' https://api.spotify.com/ https://p.scdn.co/mp3-preview/ https://i.scdn.co/image/ ; frame-src 'self' data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://storage.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:"
+    content-security-policy: "default-src 'self' https://api.spotify.com/ https://p.scdn.co/mp3-preview/ https://i.scdn.co/image/; frame-src 'self' data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://storage.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://i.scdn.co/image/; font-src 'self' data:"
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
