--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Mon May 01 16:28:57 BST 2023
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/teamproject|teamproject
+webSSL=false
 webAllowOthers=true
 webPort=8092
-webSSL=false
